white space fixed

--- a/css/query.css
+++ b/css/query.css
@@ -1,7 +1,8 @@
 @media (max-width: 480px) {
 
+
     body {
-        overflow-x: hidden;
+        overflow: hidden;
     }
 
     nav {
