--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,17 @@
     scroll-behavior: smooth;
 }
 
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
 body {
     background-color: black;
     width: 100%;
-    overflow-x: hidden;
 }
 
 /* Header */
